2010-12-27 gabriel
* Moved all Portal Type Roles from erp5_web_ung_core to erp5_web_ung_role
* Added Roles to Person Portal Type. This role is used to the user authenticated see the object. Missing add function that is used by Portal Types Roles.

2010-12-18 gabriel
* Added Proxy Roles
* Added Portal Types Roles to be possible a erp5 users create manipulate Documents in UNG Web Site

2010-11-02 gabriel
* Update path of jquery plugins

2010-10-15 gabriel
* Remove erp5_jquery folder and added erp5_jquery bt5 as dependency.

2010-10-13 gabriel
* The initial version.