@@ -1,3 +1,4 @@
+Preference | ung_preference_view
 Web Illustration | list
 Web Illustration | local_permission
 Web Illustration | related
